src/objects/ADvendio__AdServerCustomField__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdServerLogin__c</fullName>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>AdServer Custom Fields</relationshipLabel>
        <relationshipName>AdServerCustomFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__CustomFieldID__c</fullName>
        <description>The ID of this custom field by the Ad server.</description>
        <inlineHelpText>Enter the ID of this custom field by the Ad server.</inlineHelpText>
        <label>Custom Field ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DataFieldPath__c</fullName>
        <description>The field path for getting the data. The data will be set to the custom field by Ad server. The path must start with a object API name.</description>
        <inlineHelpText>Enter the field path for getting the data being set to the custom field by Ad server. The path must start with a object API name. Currently only &quot;Media Campaign&quot; or &quot;Campaign Item&quot; will be accepted as start object.</inlineHelpText>
        <label>Data Field Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AdServer Custom Field</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AdServer Custom Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdServer Custom Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>